comments section done venera

--- a/index.html
+++ b/index.html
@@ -177,6 +177,75 @@
                 </div>
             </div>
         </section>
+        <section id="easy">
+            <div class="container">
+                <h2>Make your work easier</h2>
+                <div class="easy-cards">
+                    <div class="easy-card img1">
+                        <div class="card-img">
+                            <img src="./public/images/easy-card-img1.svg" alt=" ">
+                        </div>
+                        <div class="easy-text">
+                            <h4>Team Surveys & Reports</h4>
+                            <p>Short, anonymous surveys track your <br>team’s needs weekly so you can focus.</p>
+                        </div>
+                    </div>
+
+                    <div class="easy-card img2">
+                        <div class="card-img">
+                            <img src="./public/images/easy-card-img2.svg" alt=" ">
+                        </div>
+                        <div class="easy-text">
+                            <h4>Collaborative 1:1 </h4>
+                            <p>Build relationships by planning <br>     
+                                1-on-1s and start meetings.</p>
+                        </div>
+                    </div>
+
+                    <div class="easy-card img3">
+                        <div class="card-img">
+                            <img src="./public/images/easy-card-img3.svg" alt=" ">
+                        </div>
+                        <div class="easy-text">
+                            <h4>Learning Center</h4>
+                            <p>Quickly get solutions tailored to your <br>personal challenges from the manager.</p>
+                        </div>
+                    </div>
+
+                    <div class="easy-card img4">
+                        <div class="card-img">
+                            <img src="./public/images/easy-card-img4.svg" alt=" ">
+                        </div>
+                        <div class="easy-text">
+                            <h4>Anonymous Messaging</h4>
+                            <p>Develop trust in a safe channel for <br>important conversations.</p>
+                        </div>
+                    </div>
+
+                    <div class="easy-card img5">
+                        <div class="card-img">
+                            <img src="./public/images/easy-card-img5.svg" alt=" ">
+                        </div>
+                        <div class="easy-text ">
+                            <h4>Conversation Engine</h4>
+                            <p>Communicate confidently with <br>
+                                recommended talking points.</p>
+                        </div>
+                    </div>
+
+                    <div class="easy-card img6  ">
+                        <div class="card-img">
+                            <img src="./public/images/easy-card-img6.svg" alt=" ">
+                        </div>
+                        <div class="easy-text">
+                            <h4>Exclusives Manager</h4>
+                            <p>Access manager tips, activities and <br>
+                                best practices from our team of experts.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer staeted -->
     <footer></footer>
