easy text done venera

--- a/index.html
+++ b/index.html
@@ -246,6 +246,23 @@
                 </div>
             </div>
         </section>
+        <section id="stats">
+            <div class="container">
+                <div class="stats">
+                    <div class="stat-text">
+                        <h2>We work how you
+                           <br> work everyday</h2>
+                        <p>Since the easiest things to use actually get used, we <br> adapts to the way your team works – not the other <br> way around.</p>
+                        <a href="#">Get started Free</a>
+                    </div>
+                    <div class="stat-graph">
+                        <img src="./public/images/stat-graph-image.svg" alt="">
+                        <img src="./public/images/stat-graph-image2.svg" alt="">
+                    </div>
+                    <img src="./public/images/mobile-stats-image.svg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer staeted -->
     <footer></footer>
