--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examination TenX</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./components/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -259,7 +260,117 @@
                         <img src="./public/images/stat-graph-image.svg" alt="">
                         <img src="./public/images/stat-graph-image2.svg" alt="">
                     </div>
-                    <img src="./public/images/mobile-stats-image.svg" alt="">
+                    <img src="./public/images/mobile-stats-image.svg" alt="" id="image">
+                </div>
+            </div>
+        </section>
+        <section id="customers">
+            <div class="container">
+                <div class="customers">
+                    <div class="customers-title">
+                        <h2>Why customers love
+                            working with us</h2>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <div>
+                        <div id="carouselExampleIndicators" class="carousel slide">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">    
+                              <div class="carousel-item active">
+                                <p>“It's amazing what has helped me learn about my team     <br>    
+                                    I don't worry about blindspots anymore, and 1-on-1s have never <br>
+                                    been more productive. The team loves it.”</p>
+                                    <div class="author">
+                                        <img src="./public/images/author1.svg" alt="">
+                                        <div class="author-name">
+                                            <h4>Jorge Robertson</h4>
+                                            <p>CS at Google</p>
+                                        </div>
+                                    </div>
+                              </div>
+                              <div class="carousel-item">
+                                <p>“It's amazing what has helped me learn about my team     <br>    
+                                    I don't worry about blindspots anymore, and 1-on-1s have never <br>
+                                    been more productive. The team loves it.”</p>
+                                    <div class="author">
+                                        <img src="./public/images/author2.svg" alt="">
+                                        <div class="author-name">
+                                            <h4>Francisco Bell</h4>
+                                            <p>Designer at Microsoft</p>
+                                        </div>
+                                    </div>
+                              </div>
+                              <div class="carousel-item">
+                                <p>“It's amazing what has helped me learn about my team     <br>    
+                                    I don't worry about blindspots anymore, and 1-on-1s have never <br>
+                                    been more productive. The team loves it.”</p>
+                                    <div class="author">
+                                        <img src="./public/images/author3.svg" alt="">
+                                        <div class="author-name">
+                                            <h4>Beth Fox</h4>
+                                            <p>Developer at Airbnb</p>
+                                        </div>
+                                    </div>
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon bg-danger " aria-hidden="true"></span>
+                              <span class="visually-hidden ">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                              <span class="carousel-control-next-icon bg-danger " aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div> 
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    
                 </div>
             </div>
         </section>
@@ -267,6 +378,11 @@
     <!-- footer staeted -->
     <footer></footer>
 
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 
 </html>
