--- a/index.html
+++ b/index.html
@@ -324,12 +324,12 @@
                             </div>
                             <button class="carousel-control-prev " type="button"
                                 data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon bg-danger " aria-hidden="true"></span>
+                                <span class="carousel-control-prev-icon  " aria-hidden="true"></span>
                                 <span class="visually-hidden ">Previous</span>
                             </button>
                             <button class="carousel-control-next" type="button"
                                 data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                <span class="carousel-control-next-icon bg-danger " aria-hidden="true"></span>
+                                <span class="carousel-control-next-icon " aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
@@ -341,7 +341,7 @@
             <div class="container">
                 <div class="download">
                     <div class="download-text">
-                        <h2>84% of employees who use <br>
+                        <h2>84% of employees who use 
                             trust their direct manager</h2>
                     </div>
                     <div class="download-with">
@@ -429,7 +429,9 @@
         </section>
     </main>
     <!-- footer staeted -->
-    <footer></footer>
+    <footer>
+        
+    </footer>
 
 
 
