footer-top done venera

--- a/index.html
+++ b/index.html
@@ -430,7 +430,47 @@
     </main>
     <!-- footer staeted -->
     <footer>
-        
+        <section id="footer">
+            <div class="container">
+                <div class="footer-groups">
+                    <div class="group">
+                        <h2>Company</h2>
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="group">
+                        <h2>Support</h2>
+                        <ul>
+                            <li><a href="#">Help Center </a></li>
+                            <li><a href="#">Safety Center </a></li>
+                            <li><a href="#">Community</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="group">
+                        <h2>Legal</h2>
+                        <ul>
+                            <li><a href="#">Cookies policy</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="group">
+                        <h2>Install app</h2>
+                        <ul>
+                            <a href="#"> <img src="./public/images/Layer1-black.svg" alt="Layer 1"></a>
+                            <a href="#"> <img src="./public/images/Layer2_black.svg" alt="Layer 2"></a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
 
 
