footer top done venera

--- a/index.html
+++ b/index.html
@@ -434,7 +434,13 @@
             <div class="container">
                 <div class="footer-groups">
                     <div class="group">
-                        <h2>Company</h2>
+                        <div class="menu-drop">
+                            <h2>Company</h2>
+                        <div>
+                            <input type="checkbox" id="check1" name="check1 ">
+                            <label for="check1"><img src="./public/images/arrow.svg" alt=""></label>
+                        </div>
+                        </div>
                         <ul>
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Blog</a></li>
@@ -461,7 +467,7 @@
                         </ul>
                     </div>
 
-                    <div class="group">
+                    <div class="group group-download">
                         <h2>Install app</h2>
                         <ul>
                             <a href="#"> <img src="./public/images/Layer1-black.svg" alt="Layer 1"></a>
@@ -469,6 +475,11 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section id="footer-bottom">
+            <div class="container">
+                
             </div>
         </section>
     </footer>
